--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <title>My Design Idea</title>
   </head>
   <body>
+    <!--===============Navbar======================-->
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close mt-3">
@@ -55,32 +56,22 @@
               >
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li class="has-children">
-                  <a href="#about-section" class="nav-link">About Us</a>
+                  <a href="#about-section" class="nav-link">Services</a>
                   <ul class="dropdown">
-                    <li><a href="#team-section" class="nav-link">Team</a></li>
+                    <li><a href="#team-section" class="nav-link">Mobile Application</a></li>
                     <li>
-                      <a href="#pricing-section" class="nav-link">Pricing</a>
+                      <a href="#pricing-section" class="nav-link">Web Development</a>
                     </li>
-                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>
-                    <li>
-                      <a href="#gallery-section" class="nav-link">Gallery</a>
-                    </li>
-                    <li>
-                      <a href="#services-section" class="nav-link">Services</a>
-                    </li>
-                    <li>
-                      <a href="#testimonials-section" class="nav-link"
-                        >Testimonials</a
-                      >
-                    </li>
-                    <li class="has-children">
+                    <li><a href="#faq-section" class="nav-link">Cloud Computing</a></li>
+                    <!--Code for deep-dropdown-->
+                    <!--<li class="has-children">
                       <a href="#">More Links</a>
                       <ul class="dropdown">
                         <li><a href="#">Menu One</a></li>
                         <li><a href="#">Menu Two</a></li>
                         <li><a href="#">Menu Three</a></li>
                       </ul>
-                    </li>
+                    </li>-->
                   </ul>
                 </li>
 
@@ -116,6 +107,7 @@
         </div>
       </div>
     </header>
+    <!--===============Navbar======================-->
 
     <div class="hero">
       <div
