--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
                   </ul>
                 </li>
 
+                <li class="has-children">
+                  <a href="#technologies" class="nav-link">Technologies</a>
+                  <ul class="dropdown">
+                    <li><a href="#" class="nav-link">Microsoft</a></li>
+                    <li>
+                      <a href="#" class="nav-link">Open Source</a>
+                    </li>
+                    <li><a href="#" class="nav-link">Java</a></li>
+                    <li><a href="#" class="nav-link">Mobility</a></li>
+                    <li><a href="#" class="nav-link">Database</a></li>
+                    <li><a href="#" class="nav-link">Testing</a></li>
+                  </ul>
+                </li>
+
                 <li><a href="#blog-section" class="nav-link">Blog</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
                 <!--<li class="social">
