--- a/index.html
+++ b/index.html
@@ -89,8 +89,17 @@
                   </ul>
                 </li>
 
-                <li><a href="#blog-section" class="nav-link">Blog</a></li>
-                <li><a href="#contact-section" class="nav-link">Contact</a></li>
+                <li><a href="#blog-section" class="nav-link">Businesses We Support</a></li>
+                <li class="has-children">
+                  <a href="#about" class="nav-link">About Us</a>
+                  <ul class="dropdown">
+                    <li><a href="#" class="nav-link">Team</a></li>
+                    <li>
+                      <a href="#" class="nav-link">Contact</a>
+                    </li>
+                    <li><a href="#" class="nav-link">Careers</a></li>
+                  </ul>
+                </li>
                 <!--<li class="social">
                   <a href="#contact-section" class="nav-link"
                     ><span class="icon-facebook"></span
