--- a/index.html
+++ b/index.html
@@ -89,7 +89,27 @@
                   </ul>
                 </li>
 
-                <li><a href="#blog-section" class="nav-link">Businesses We Support</a></li>
+                <li class="has-children">
+                  <a href="#businesses" class="nav-link">Businesses We Support</a>
+                  <ul class="dropdown">
+                    <li><a href="#" class="nav-link">Enterprise</a></li>
+                    <li>
+                      <a href="#" class="nav-link">Govt & Semi-Govt</a>
+                    </li>
+                    <li><a href="#" class="nav-link">Start-ups</a></li>
+                    <li><a href="#" class="nav-link">Banking & Finance</a></li>
+                    <li><a href="#" class="nav-link">E-Commerce & Retail</a></li>
+                    <li><a href="#" class="nav-link">e-learning</a></li>
+                    <li><a href="#" class="nav-link">Healthcare</a></li>
+                    <li>
+                      <a href="#" class="nav-link">Insurance</a>
+                    </li>
+                    <li><a href="#" class="nav-link">Manufacturing</a></li>
+                    <li><a href="#" class="nav-link">Media & Entertainment</a></li>
+                    <li><a href="#" class="nav-link">Telecom</a></li>
+                  </ul>
+                </li>
+
                 <li class="has-children">
                   <a href="#about" class="nav-link">About Us</a>
                   <ul class="dropdown">
