--- a/index.html
+++ b/index.html
@@ -54,7 +54,18 @@
               <ul
                 class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block"
               >
-                <li><a href="#home-section" class="nav-link">Home</a></li>
+
+                <li class="has-children">
+                  <a href="#solutions" class="nav-link">Solutions</a>
+                  <ul class="dropdown">
+                    <li><a href="#" class="nav-link">CRM</a></li>
+                    <li>
+                      <a href="#" class="nav-link">CMS</a>
+                    </li>
+                    <li><a href="#" class="nav-link">ERP</a></li>
+                  </ul>
+                </li>
+
                 <li class="has-children">
                   <a href="#about-section" class="nav-link">Services</a>
                   <ul class="dropdown">
@@ -90,11 +101,22 @@
                 </li>
 
                 <li class="has-children">
+                  <a href="#solutions" class="nav-link">Engage Us For</a>
+                  <ul class="dropdown">
+                    <li><a href="#" class="nav-link">Consulting</a></li>
+                    <li>
+                      <a href="#" class="nav-link">Project Planning & execution</a>
+                    </li>
+                    <li><a href="#" class="nav-link">Niche Skilled resources</a></li>
+                  </ul>
+                </li>
+
+                <li class="has-children">
                   <a href="#businesses" class="nav-link">Businesses We Support</a>
                   <ul class="dropdown">
                     <li><a href="#" class="nav-link">Enterprise</a></li>
                     <li>
-                      <a href="#" class="nav-link">Govt & Semi-Govt</a>
+                      <a href="#" class="nav-link">Govt & Semi-Govt Agencies</a>
                     </li>
                     <li><a href="#" class="nav-link">Start-ups</a></li>
                     <li><a href="#" class="nav-link">Banking & Finance</a></li>
@@ -113,11 +135,13 @@
                 <li class="has-children">
                   <a href="#about" class="nav-link">About Us</a>
                   <ul class="dropdown">
-                    <li><a href="#" class="nav-link">Team</a></li>
+                    <li><a href="#" class="nav-link">Vision</a></li>
                     <li>
-                      <a href="#" class="nav-link">Contact</a>
+                      <a href="#" class="nav-link">Global Presence</a>
                     </li>
-                    <li><a href="#" class="nav-link">Careers</a></li>
+                    <li><a href="#" class="nav-link">Leadership</a></li>
+                    <li><a href="#" class="nav-link">Career</a></li>
+                    <li><a href="#" class="nav-link">Why Us</a></li>
                   </ul>
                 </li>
                 <!--<li class="social">
