--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
+
     <title>My Design Idea</title>
   </head>
   <body>
@@ -233,9 +235,7 @@
                     <div class="carousel_caption">
                       <h1>Lorem ipsum</h1>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.
+                        With due emphasis on invention, swiftness and quality, we deliver top-notch web applications that works for small, medium and large-scale enterprises alike.
                       </p>
                       <a
                         class="btn btn-info-gradiant btn-md rounded-pill mt-3"
@@ -266,9 +266,7 @@
                     <div class="carousel_caption">
                       <h1>Lorem ipsum</h1>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua.
+                        The team at MyDesignIdea can help evaluate your cloud-readiness, assess the suitability of the application and your legacy systems, improve security and compliance, increase ROI and develop a cloud roadmap that will empower your organization to a seamless migration.
                       </p>
                       <a
                         class="btn btn-info-gradiant btn-md rounded-pill mt-3"
